# healthcare-consultant

./: .env.example  .gitignore  .vercelignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/intake/: page.tsx
app/pricing/: page.tsx
app/reports/[id]/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: intake.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  database.py  migrate.py  models.py  patient_id.py
backend/app/schemas/: triage.py
backend/app/services/: ai_exceptions.py  ai_service.py  prompt_builder.py  triage_engine.py
components/: FeatureCard.tsx  IntakeForm.tsx  PatientIdentityBar.tsx  PricingCards.tsx  ReportView.tsx  SiteHeader.tsx
components/ui/: badge.tsx  button.tsx  select.tsx  textarea.tsx
lib/: api.ts
